# halvr-tauri

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: conversion.rs  encoder.rs  files.rs  metadata.rs  mod.rs  platform.rs  settings.rs
src-tauri/src/models/: errors.rs  metadata.rs  mod.rs  queue_item.rs  settings.rs
src-tauri/src/services/: encoder_detect.rs  ffmpeg.rs  ffprobe.rs  mod.rs  output_path.rs  supported_formats.rs
src/components/: DropZone.tsx  QueueItemRow.tsx  QueueList.tsx  SettingsDialog.tsx  TitleBar.tsx
src/hooks/: use-conversion.ts  use-drag-drop.ts  use-settings.ts
src/i18n/: en.json  index.ts  ja.json
src/lib/: commands.ts  events.ts  format-utils.ts
src/stores/: conversion-store.ts
src/styles/: globals.css
src/types/: index.ts
