[package]
name = "halvr"
version = "1.0.0"
edition = "2021"

[lib]
name = "halvr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
filetime = "0.2"
which = "7"

[dev-dependencies]
tempfile = "3.27.0"
